--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,10 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - IoT Scheduler</title>
-
-    
-
-
     <link rel="stylesheet" href="~/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 
@@ -41,7 +37,7 @@
 
     <footer class="footer border-top cyan darken-3 z-depth-3" style="width:100vw">
         <div class="container white-text">
-            &copy; 2021 - CalWebApi - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - CMSB IoT Scheduler 
         </div>
     </footer>
     
