--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             <table id="task-dataTable" class="dataTable" style="width:100%">
                 <thead class="">
                     <tr>
-                        <th >Task Name </th>
+                        <th>Task Name </th>
                         <th>Group</th>
                         <th>Previous Fire Time</th>
                         <th>Next Fire Time</th>
@@ -72,20 +72,20 @@
                             <li class="tab col">
                                 <a class=""  id="hourly-tab" href="#hourly" role="tab" aria-controls="hourly" aria-selected="false">Hourly</a>
                             </li>
-                            <li class="tab col">
+                            <li class="tab col disabled">
                                 <a class=""  id="daily-tab" href="#daily" role="tab" aria-controls="daily" aria-selected="false">Daily</a>
                             </li>
-                            <li class="tab col">
+                            <li class="tab col disabled">
                                 <a class=""  id="weekly-tab" href="#weekly" role="tab" aria-controls="weekly" aria-selected="false">Weekly</a>
                             </li>
-                            <li class="tab col">
+                            <li class="tab col disabled">
                                 <a class="" id="monthly-tab" href="#monthly" role="tab" aria-controls="monthly" aria-selected="false">Monthly</a>
                             </li>
-                            <li class="tab col">
+                            <li class="tab col disabled">
                                 <a class="" id="yearly-tab" href="#yearly" role="tab" aria-controls="yearly" aria-selected="false">Yearly</a>
                             </li>
 
-                            <li class="tab col">
+                            <li class="tab col disabled">
                                 <a class="advanced-cron" id="advanced-tab" href="#advanced" role="tab" aria-controls="advanced" aria-selected="false">Advanced</a>
                             </li>
                         </ul>
