--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
             </div>
         
     
-    <div class="container" style="margin-top:2rem; padding-bottom:70px">
-        <main role="main" class="row z-depth-1" style="padding:1rem">
+    <div class="container" style="margin-top:2rem; padding-bottom:70px; max-height:70vh">
+        <main role="main" class="row z-depth-1" style="padding:1rem; max-height:70vh;" >
 
             @RenderBody()
         </main>
