--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                             <li class="tab col">
                                 <a class=""  id="hourly-tab" href="#hourly" role="tab" aria-controls="hourly" aria-selected="false">Hourly</a>
                             </li>
-                            <li class="tab col disabled">
+                            <li class="tab col">
                                 <a class=""  id="daily-tab" href="#daily" role="tab" aria-controls="daily" aria-selected="false">Daily</a>
                             </li>
                             <li class="tab col disabled">
@@ -90,7 +90,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="tab-content" id="myTabContent">
+                    <div class="" id="myTabContent">
                         <!--Tab Minutes-->
                         <div class="tab-pane fade show active " id="minutely" role="tabpanel" aria-labelledby="minutes-tab">
                             <div class="row p-3 valign-wrapper">
@@ -199,17 +199,23 @@
                         <div class="tab-pane fade" id="daily" role="tabpanel" aria-labelledby="daily-tab">
                             <div class="">
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="radio" name="dailyLable" id="daily-lable-one">
-                                    <label class="form-check-label" for="daily-lable-one">Everyday</label>
+                                    
+                                    <label class="form-check-label" for="daily-lable-one">
+                                        <input class="form-check-input" type="radio" name="dailyLable" id="daily-lable-one" value="everyday">
+                                        <span>Everyday</span>
+                                    </label>
                                 </div>
                                 <div class="form-inline mt-2">
-                                    <input class="form-check-input" type="radio" name="dailyLable" id="daily-lable-one">
-                                    <label class="form-check-label" for="daily-lable-one">Every Weakday</label>
+                                    
+                                    <label class="form-check-label" for="daily-lable-two">
+                                        <input class="form-check-input" type="radio" name="dailyLable" id="daily-lable-two" value="weekday">
+                                        <span>Every Weekday</span>
+                                    </label>
                                 </div>
-                                <div class="form-inline mt-3">
-                                    <label class="form-check-label">Start At</label>
-                                    <div class="form-inline ">
-                                        <select class="form-control form-control-sm ml-2 mr-1" id="cron-hour-start" name="cronHourStart">
+                                <div class="valign-wrapper">
+                                    <label class="form-check-label" style="padding-right:1rem">Start At</label>
+                                    <div class="short-w">
+                                        <select class="cron-select" id="cron-dailyHour-start" name="dailyStartAtHours">
                                             @{
                                                 string tempvaldaily = "";
                                                 for (int i = 0; i < 24; i++)
@@ -226,8 +232,10 @@
                                                 }
                                             }
                                         </select>
-                                        :
-                                        <select class="form-control form-control-sm ml-1">
+                                    </div>
+                                    <span style="padding:0 1rem 0 1rem"> : </span>
+                                    <div class="short-w">
+                                        <select class="cron-select" name="dailyStartAtMinutes">
                                             @{
                                                 string tempvaldaily2 = "";
                                                 for (int i = 0; i < 60; i++)
@@ -401,7 +409,7 @@
                         </div>
 
                         <!--Tab Yearly-->
-                        <div class="tab-pane fade" id="yearly" role="tabpanel" aria-labelledby="yearly-tab">
+                        <div class="" id="yearly" role="tabpanel" aria-labelledby="yearly-tab">
                             <div class="form-inline mt-3">
                                 <div class="form-check form-check-inline">
                                     <input class="weekly-weekday-checkbox" type="radio" id="yearly-radiodot" value="every">
@@ -499,7 +507,7 @@
                         </div>
 
                         <!--Advanced Tab-->
-                        <div id="advanced" class="tab-pane fade">
+                        <div id="advanced" class="">
                             <div class="form-group">
                                 <hr />
                                 <label class="align-self-center text-center" for="cron-output">Task Schedule</label>
