--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,9 +58,9 @@
     </div>
     <div class="modal-content" style="margin-top:57px">
         <form id="ScheduleTaskForm">
-            <div class="form-group">
+            <div class="input-field">
                 <label for="cron-task-name">Task Name</label>
-                <input type="text" class="input-field" id="cron-task-name" name="cron-task-name" aria-describedby="Task Name" placeholder="I am a task name">
+                <input type="text" class="input-field" id="cron-task-name" name="cron-task-name" aria-describedby="Task Name" >
             </div>
             
             <div class="section">
@@ -644,7 +644,7 @@
                         <input type="text" class="form-control" id="cron-callback" name="cron-callback" placeholder="http://mysite.com/api/someting/to/do" aria-describedby="callbackprepend" required>
                     </div>
                 </div>
-                <div class="mt-2">
+                <div class="mt-2 input-field">
                     <label for="cron-description">Description</label>
                     <textarea id="cron-description" name="cron-description" class="materialize-textarea" rows="4"></textarea>
                 </div>
