--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,15 +14,15 @@
 <body>
   
             <div class="col s12 cyan darken-1 z-depth-1 center " style="width:100vw!important;height:3rem">
-                <ul class="tabs tabs-transparent right " id="indexTabs" role="tablist">
+                <ul class="tabs tabs-transparent right" id="indexTabs" role="tablist">
                     <li class="tab">
-                        <a class="active" id="home-tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                        <a class="active white-text" id="home-tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
                     </li>
                     <li class="tab" id="canedar-tab-p">
-                        <a class="" id="calendar-tab"  href="#calendar" role="tab" aria-controls="calendar" aria-selected="false">Calendar</a>
+                        <a class="white-text" id="calendar-tab"  href="#calendar" role="tab" aria-controls="calendar" aria-selected="false">Calendar</a>
                     </li>
                     <li class="tab">
-                        <a class="" id="docs-tab"  href="#docs" role="tab" aria-controls="contact" aria-selected="false">Docs</a>
+                        <a class="white-text" id="docs-tab"  href="#docs" role="tab" aria-controls="contact" aria-selected="false">Docs</a>
                     </li>
                 </ul>
             </div>
