--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -112,93 +112,63 @@ body {
     text-align:center;
 }
 
-/*Floating Left Menue*/
-
-.floating-menu {
-    border-radius: 50%;
-    z-index: 999;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    left: 0;
-    position: fixed;
-    display: inline-block;
-    top: 49
-    %;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%)
+/*Logo Font*/
+.anton {
+    font-family: 'Antonio';
+}
+.brand-logo {
+    left: 70px;
+    margin-top:0;
+    margin-bottom:0
+}
+/*NavBar
+ *******/
+.container-fluid{
+    margin: 0 auto;
+   
+    
 }
 
-.main-menu {
-    margin: 0;
-    padding-left: 0;
-    list-style: none
-}
 
-    .main-menu li a {
-        display: block;
-        padding: 20px;
-        color: #fff;
-        border-radius: 50px;
-        position: relative;
-        -webkit-transition: none;
-        -o-transition: none;
-        transition: none
+@media only screen and (min-width: 601px) {
+    .container-fluid {
+        width: 95%;
     }
-
-        .main-menu li a:hover {
-            background: rgba(244,244,244,.3)
-        }
-
-.menu-bg {
-    background-image: -webkit-linear-gradient(top,#1C5E91 0,#167699 100%);
-    background-image: -o-linear-gradient(top,#1C5E91 0,#167699 100%);
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#1C5E91),to(#167699));
-    background-image: linear-gradient(to bottom,#1C5E91 0,#167699 100%);
-    background-repeat: repeat-x;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 50px;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    -webkit-transition: .1s;
-    -o-transition: .1s;
-    transition: .1s
 }
-
-.ripple {
-    position: relative;
-    overflow: hidden;
-    transform: translate3d(0,0,0)
+@media only screen and (min-width: 993px) {
+    .container-fluid {
+        width: 98%;
+    }
 }
-
-    .ripple:after {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        pointer-events: none;
-        background-image: radial-gradient(circle,#000 10%,transparent 10.01%);
-        background-repeat: no-repeat;
-        background-position: 50%;
-        transform: scale(10,10);
-        opacity: 0;
-        transition: transform .5s,opacity 1s
-    }
-
-    .ripple:active:after {
-        transform: scale(0,0);
-        opacity: .2;
-        transition: 0s
-    }
+.nav-icon-size {
+    font-size: 2rem !important
+}
 
 .indicator {
     bottom: 2.5px !important;
+}
+
+/*Side Nav
+ **********/
+.sidenav-logo{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding-top:1rem;
+    padding-bottom:1rem;
+}
+
+.user-view a {
+    text-decoration: none
+}
+
+.sidenav li > a {
+    border-bottom: 1px solid #81d4fa;
+}
+
+.bold > a {
+    background-color: #4fc3f7;
+    font-weight: bold;
 }
 
 /*Datatable Custom CSS*/
@@ -310,4 +280,10 @@ mt-2{
     border-bottom:1px solid rgba(0,0,0,0.1);
     width:100%;
     position:absolute;
+}
+
+/*Index
+ --------*/
+.black-red-bg{
+    background: url(/images/indexblackred.jpg)
 }
