--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,16 +10,27 @@
     <link rel="stylesheet" href="~/css/QuartzDashboard.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Antonio' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     @RenderSection("Styles", required: false)
 </head>
 <body>
-    <nav class="cyan darken-1">
-        <div class="nav-wrapper container-fluid valign-wrapper">
-            <a href="#" class="brand-logo anton">Scheduler</a>
-            <a href="#" data-target="slide-out" class="button-collapse show-on-large sidenav-trigger"><i class="nav-icon-size material-icons left">menu</i></a>
+    <div class="navbar-fixed">
+        <nav class=" z-depth-2 cyan darken-1">
+            <div class="nav-wrapper container-fluid valign-wrapper ">
+                <a href="#" class="brand-logo anton">Scheduler<br /> <span class="sub-tagline">Version 0.1</span></a>
+                <a href="#" data-target="slide-out" class="button-collapse show-on-large sidenav-trigger"><i class="nav-icon-size material-icons left">menu</i></a>
 
+            </div>
+
+        </nav>
+    </div>
+    <div class="nav-wrapper blue-grey ">
+        <div class="breadcrumb-wrapper-inner">
+            <a href="#!" class="breadcrumb">First</a>
+            <a href="#!" class="breadcrumb">Second</a>
+            <a href="#!" class="breadcrumb">Third</a>
         </div>
-    </nav>
+    </div>
 
     <ul id="slide-out" class="sidenav cyan darken-4">
         <li>
@@ -63,7 +74,7 @@
     </div>
 
     <footer class="footer border-top cyan darken-3 z-depth-3" style="width:100vw">
-        <div class="container white-text">
+        <div class="container white-text right-align">
             &copy; 2021 - CMSB IoT Scheduler
         </div>
     </footer>
@@ -72,6 +83,7 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js" type="text/javascript"></script>
 
     <script src="~/lib/materialize/js/materialize.min.js"></script>
+    <script src="~/js/BreadCrumbManger.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
     <script src="~/lib/DataTables/datatables.js" asp-append-version="true"></script>
